--- a/IST541/Lab1/CSS/jobaid.css.css
+++ b/IST541/Lab1/CSS/jobaid.css.css
@@ -2,7 +2,7 @@
 /* All comments go between the front slash and asterisk symbols */
 
 body {
-	background-color: #d0d5cd;   /* background color */
+	background-color: #5B9CAA;   /* background color */
 	color: #444;          /* text color for the entire page */
 }
 
