--- a/IST541/Lab1/CSS/jobaid.css
+++ b/IST541/Lab1/CSS/jobaid.css
@@ -1,8 +1,8 @@
-@charset "UTF-8"
 /* CSS Document */
-
+/* All comments go between the front slash and asterisk symbols */
+	
 body {
-	background-color: #AC9E6C;   /* background color */
+	background-color: #B58EC1;   /* background color */
 	color: #453F3F;          /* text color for the entire page */
 }
 
@@ -12,13 +12,13 @@ h1, h2 {
 
 /* styles for the "wrapper" div, notice that "wrapper" is preceded by "#" */
 #wrapper {
-	width: 85%;
+	width: 80%;
 	margin: 0 auto;    /* centers wrapper */
 }
 
 /* styles for the "stepTitle" class, notice that "stepTitle" is preceded by a dot */
 .stepTitle{
-	padding:10px;
+	padding:20px;
 	text-align:left;
 	background-color:#32489C;
 	font-weight: bold;
