--- a/IST541/Lab2/CSS/jobaid.css
+++ b/IST541/Lab2/CSS/jobaid.css
@@ -7,7 +7,7 @@ body {
 }
 
 .warning {
-		background-color: #B91417;
+		background-color: #EB0A0E;
 		padding:10px;
 		border-radius:20px;
 	}
@@ -69,4 +69,11 @@ strong {
 }
 body { 
 outline: 6px solid magenta; 
+}
+
+"body" {
+  font-family: "Alegreya", serif;
+  font-optical-sizing: auto;
+  font-weight: <300-800>;
+  font-style: normal;
 }
