--- a/IST541/Lab3/css/lab3.css
+++ b/IST541/Lab3/css/lab3.css
@@ -10,11 +10,12 @@ a {
 	padding: 15px;
 margin: 3px;
 	font-size: 150%;
-	background-color:  black; 
-	color:  ghostwhite; 
+	background-color:  silver; 
+	color:  royalblue; 
 }
 a:hover {
 	font-size:200%;
-	background-color: your_color_of_choice; 
-	color: your_color_of_choice; 
+	background-color: whitesmoke; 
+	color: cornflowerblue; 
 }
+
