--- a/IST541/lab5/css/otter.css
+++ b/IST541/lab5/css/otter.css
@@ -11,7 +11,10 @@ text-align: center;
 border: black 5px solid;
 }
  
- #otter_eating {
+ #otter_eating urchin {
 display: none; /* hides content */
 border: black 5px solid;
+}
+.choices {
+cursor: pointer;
 }
