--- a/IST541/Lab4/css/styles.css
+++ b/IST541/Lab4/css/styles.css
@@ -1,14 +1,14 @@
 @charset "utf-8";
 /* CSS Document */
 
-background-image: url("../img/chinese_writing.gif");   /* background image*/
+background-image: url("../img/wheels.jpg");   /* background image*/
 	color: #444;          /* text color for the entire document */
 	font-size: 12px;
 	font-family:Verdana, Geneva, sans-serif;
 }
 
 #wrapper {
-	width:900px;
+	width:1000px;
 	margin:0 auto;         /* centers wrapper */
  	text-align:center;
 	background-color: rgba(255, 255, 255, 0.8);  /* creates white background with 80% opacity */
