--- a/IST541/Lab4/css/styles.css
+++ b/IST541/Lab4/css/styles.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-
+body {
 background-image: url("../img/wheels.jpg");   /* background image*/
 	color: #444;          /* text color for the entire document */
 	font-size: 14px;
@@ -19,7 +19,7 @@ table {
 }
 
 td {
-	background-color: white;  /* sets background color for table cells*/
+	background-color: lightgray;  /* sets background color for table cells*/
 }
 
 h1, h2 { 
