--- a/IST541/Lab4/css/styles.css
+++ b/IST541/Lab4/css/styles.css
@@ -6,12 +6,17 @@ background-image: url("../img/wheels.jpg");   /* background image*/
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
 }
-{
+a {
 padding: 15px;
 margin: 3px;
 	font-size: 125%;
 	background-color:  silver; 
 	color:  black; 
+	
+a:hover {
+	font-size:200%;
+	background-color: navajowhite; 
+	color: cornflowerblue; 
 }
 #wrapper {
 	width:1000px;
