--- a/IST541/Lab4/css/styles.css
+++ b/IST541/Lab4/css/styles.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body {
 	text-align: center;
-background-image: url("../img/wheels.jpg");   /* background image*/
+background-image: url("../img/background.jpg");   /* background image*/
 	color: #444;          /* text color for the entire document */
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
