--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -4,7 +4,7 @@
 body {
 	text-align: center;
 	background-color: darkgray;
-background-image: url("../img/waterlily.jpg");   /* background image*/
+background-image: url();   /* background image*/
 	color: #black;          /* text color for the entire document */
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
