--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -21,7 +21,7 @@ background-image: url();   /* background image*/
 }
 
 h1, h2 { 
-	text-align:center;     
+	text-align:center; text-justify:     
 	font-family: Sans-serif;
 }
 
