--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -1,10 +1,13 @@
 @charset "utf-8";
 /* CSS Document */
 
+{
+	box-sizing: border-box
+}
+
 body {
 	text-align: center;
 	background-color: darkgray;
-background-image: url();   /* background image*/
 	color: #black;          /* text color for the entire document */
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
@@ -40,7 +43,7 @@ a:hover {
 
 #wrapper {
 width: 900px;
-margin: 0 auto;
+margin: 18px auto 6px;
 text-align: center;
 }
 
