--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -5,6 +5,7 @@ body {
 	box-sizing: border-box
 	text-align: center;
 	background-color: darkgray;
+	background-image: url("../img/ocean.jpg");
 	color: #black;          /* text color for the entire document */
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
