--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -3,7 +3,7 @@
 
 body {
 	text-align: center;
-	background-color: aqua;
+	background-color: #fceed1;
 	color: #black;          /* text color for the entire document */
 	font-size: 14px;
 	font-family:Verdana, Geneva, sans-serif;
