--- a/IST541/Labfinal/css/final.css
+++ b/IST541/Labfinal/css/final.css
@@ -30,7 +30,7 @@ a {
     margin: 10px;
 	font-size: 150%;
 	background-color:  #2d545e; 
-	color:  #12343b; 
+	color:  #black; 
 }
 a:hover {
 	font-size:100%;
